--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,6 +8,10 @@ subtitle: 'CS 175: Project in AI'
 #########################
 # more settings
 
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
+
 markdown: kramdown
 
 exclude:
